force-app/main/default/objects/FA_MasterBlaster__c/FA_MasterBlaster__c.object-meta.xml
<CustomObject>
    <label>FA MasterBlaster</label>
    <nameField>
        <label>FA MasterBlaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA MasterBlaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>