force-app/main/default/objects/FA_MasterBlaster__c/fields/BRAND__c.field-meta.xml
<CustomField>
    <fullName>BRAND__c</fullName>
    <label>BRAND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>