force-app/main/default/objects/FA_MasterBlaster__c/fields/EffDia__c.field-meta.xml
<CustomField>
    <fullName>EffDia__c</fullName>
    <label>EffDia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>