force-app/main/default/objects/FA_MasterBlaster__c/fields/GasGroupLevel__c.field-meta.xml
<CustomField>
    <fullName>GasGroupLevel__c</fullName>
    <label>GasGroupLevel</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>