force-app/main/default/objects/FA_MasterBlaster__c/fields/Mounting__c.field-meta.xml
<CustomField>
    <fullName>Mounting__c</fullName>
    <label>Mounting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>