force-app/main/default/objects/FA_MasterBlaster__c/fields/OpPresPSIA__c.field-meta.xml
<CustomField>
    <fullName>OpPresPSIA__c</fullName>
    <label>OpPresPSIA</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>