force-app/main/default/objects/FA_MasterBlaster__c/fields/RunUpLengthAIn__c.field-meta.xml
<CustomField>
    <fullName>RunUpLengthAIn__c</fullName>
    <label>RunUpLengthAIn</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>