force-app/main/default/objects/FA_MasterBlaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BRAND__c</columns>
    <columns>PTC__c</columns>
    <columns>Description__c</columns>
    <columns>SZC__c</columns>
    <columns>ESZC__c</columns>
    <columns>CDC_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>contains</operation>
        <value>76V-SF</value>
    </filters>
    <label>All</label>
</ListView>